// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListReplyRequests filters by mixed query 1`] = `
Object {
  "data": Object {
    "ListReplyRequests": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "replyrequests3",
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests2",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListReplyRequests filters: by articleId 1`] = `
Object {
  "data": Object {
    "ListReplyRequests": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "replyrequests3",
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListReplyRequests filters: by createdAt 1`] = `
Object {
  "data": Object {
    "ListReplyRequests": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "replyrequests4",
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests3",
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests1",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`ListReplyRequests filters: by ids 1`] = `
Object {
  "data": Object {
    "ListReplyRequests": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "replyrequests4",
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests2",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListReplyRequests filters: by userId 1`] = `
Object {
  "data": Object {
    "ListReplyRequests": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "replyrequests3",
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests2",
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests1",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`ListReplyRequests lists all RelyRequests 1`] = `
Object {
  "data": Object {
    "ListReplyRequests": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "replyrequests4",
            "user": Object {
              "id": "user2",
              "name": "user 2",
            },
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests3",
            "user": Object {
              "id": "user1",
              "name": "user 1",
            },
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests2",
            "user": Object {
              "id": "user1",
              "name": "user 1",
            },
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests1",
            "user": Object {
              "id": "user1",
              "name": "user 1",
            },
          },
        },
      ],
      "totalCount": 4,
    },
  },
}
`;

exports[`ListReplyRequests sorts: by createdAt 1`] = `
Object {
  "data": Object {
    "ListReplyRequests": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "replyrequests2",
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests4",
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests3",
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests1",
          },
        },
      ],
      "totalCount": 4,
    },
  },
}
`;

exports[`ListReplyRequests sorts: by vote 1`] = `
Object {
  "data": Object {
    "ListReplyRequests": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "replyrequests2",
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests4",
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests3",
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests1",
          },
        },
      ],
      "totalCount": 4,
    },
  },
}
`;

exports[`ListReplyRequests supports after 1`] = `
Object {
  "data": Object {
    "ListReplyRequests": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "replyrequests1",
          },
        },
      ],
      "totalCount": 4,
    },
  },
}
`;

exports[`ListReplyRequests supports before 1`] = `
Object {
  "data": Object {
    "ListReplyRequests": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "replyrequests4",
          },
        },
        Object {
          "node": Object {
            "id": "replyrequests3",
          },
        },
      ],
      "totalCount": 4,
    },
  },
}
`;
